@@ -3,19 +3,16 @@ package itschool.crmfinalproject.startup;
 import com.github.javafaker.Faker;
 import itschool.crmfinalproject.entity.app.event.Comment;
 import itschool.crmfinalproject.entity.app.event.Event;
-import itschool.crmfinalproject.entity.app.event.EventTypeEnum;
+import itschool.crmfinalproject.entity.app.event.EventCategory;
 import itschool.crmfinalproject.repository.CommentRepository;
 import itschool.crmfinalproject.repository.EventRepository;
+import itschool.crmfinalproject.repository.event.EventCategoryRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalDateTime;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Random;
-import java.util.concurrent.TimeUnit;
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
@@ -24,12 +21,17 @@ import java.util.stream.IntStream;
 public class NoSQLSeeder implements CommandLineRunner {
 
     private final EventRepository eventRepository;
+    private final EventCategoryRepository eventCategoryRepository;
     private final CommentRepository commentRepository;
     private final Faker faker = new Faker();
     private final Random random = new Random();
 
     @Override
     public void run(String... args) {
+        if (eventCategoryRepository.count() == 0) {
+            seedEventTypeOptions();
+        }
+
         if (eventRepository.count() == 0) {
             List<Event> events = IntStream.range(0, 50)
                     .mapToObj(i -> createEvent())
@@ -39,42 +41,48 @@ public class NoSQLSeeder implements CommandLineRunner {
         }
     }
 
+    private void seedEventTypeOptions() {
+        List<EventCategory> eventCategoryOptionsList = List.of(
+                new EventCategory("call", Arrays.asList("Duration", "Caller ID", "Call Type", "Call Result")),
+                new EventCategory("acquisition", Arrays.asList("Amount", "Purchase Date", "Subscription", "Payment Method")),
+                new EventCategory("meeting", Arrays.asList("Meeting Date", "Location", "Participants", "Agenda")),
+                new EventCategory("cancellation", Arrays.asList("Reason", "Feedback", "Unsubscribe"))
+        );
+
+        eventCategoryRepository.saveAll(eventCategoryOptionsList);
+    }
+
     private Event createEvent() {
-        EventTypeEnum eventType = EventTypeEnum.values()[random.nextInt(EventTypeEnum.values().length)];
-        Map<String, Object> details = generateEventDetails(eventType);
+        String eventCategory = getRandomEventType();
+        Map<String, Object> fieldDetails = generateEventDetails(eventCategory);
 
         Event event = new Event();
         event.setTitle(faker.company().catchPhrase());
         event.setTime(LocalDateTime.now().minusDays(random.nextInt(365)));
         event.setDescription(faker.lorem().paragraph());
-        event.setEventType(eventType);
-        event.setDetails(details);
+        event.setEventCategory(eventCategory);
+        event.setFieldDetails(fieldDetails);
         return event;
     }
 
-    private Map<String, Object> generateEventDetails(EventTypeEnum eventType) {
-        Map<String, Object> details = new HashMap<>();
-        details.put("Location", faker.address().fullAddress());
-        details.put("Note", faker.lorem().sentence());
+    private String getRandomEventType() {
+        List<String> eventCategorys = List.of("call", "acquisition", "meeting", "cancellation");
+        return eventCategorys.get(random.nextInt(eventCategorys.size()));
+    }
 
-        if (eventType == EventTypeEnum.CALL) {
-            details.put("Duration", faker.number().digit() + " mins");
-            details.put("Caller ID", faker.phoneNumber().phoneNumber());
-        } else if (eventType == EventTypeEnum.MEETING) {
-            details.put("Meeting Date", faker.date().future(30, TimeUnit.DAYS).toString());
-            details.put("Participants", faker.number().numberBetween(1, 10));
-            details.put("Agenda", faker.lorem().sentence());
-        }
-        // Add additional details for other event types
-
-        return details;
+    private Map<String, Object> generateEventDetails(String eventCategory) {
+        Map<String, Object> fieldDetails = new HashMap<>();
+        // This should ideally be adjusted to dynamically generate fieldDetails based on the eventCategory
+        fieldDetails.put("Location", faker.address().fullAddress());
+        fieldDetails.put("Note", faker.lorem().sentence());
+        return fieldDetails;
     }
 
     private void createAndSaveCommentsForEvent(Event event) {
         int numberOfComments = random.nextInt(1, 5);
         List<Comment> comments = IntStream.range(0, numberOfComments)
                 .mapToObj(i -> createComment(event.getId()))
-                .toList();
+                .collect(Collectors.toList());
         commentRepository.saveAll(comments);
     }
 
